tests/ui/associated-inherent-types/assoc-inherent-unstable.stderr
error[E0658]: use of unstable library feature `data`
  --> $DIR/assoc-inherent-unstable.rs:7:13
   |
LL | type Data = aux::Owner::Data;
   |             ^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(data)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
